internal/gatewayapi/testdata/securitypolicy-with-authorization-geoip-no-client-ip-detection.out.yaml
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    name: geoip-proxy
    namespace: envoy-gateway
  spec:
    geoIP:
      provider:
        maxMind:
          anonymousIpDbSource:
            local:
              path: /db/GeoIP2-Anonymous-IP.mmdb
          cityDbSource:
            local:
              path: /db/GeoLite2-City.mmdb
        type: MaxMind
    logging: {}
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: GatewayClass
        name: envoy-gateway-class
      conditions:
      - lastTransitionTime: null
        message: EnvoyProxy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
gatewayClass:
  apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    name: envoy-gateway-class
  spec:
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: geoip-proxy
      namespace: envoy-gateway
  status:
    conditions:
    - lastTransitionTime: null
      message: Valid GatewayClass
      reason: Accepted
      status: "True"
      type: Accepted
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: HTTPRoute
  metadata:
    name: httproute-geo
    namespace: default
  spec:
    hostnames:
    - www.example.com
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
      matches:
      - path:
          value: /geo1
      - path:
          value: /geo2
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      config:
        apiVersion: gateway.envoyproxy.io/v1alpha1
        kind: EnvoyProxy
        metadata:
          name: geoip-proxy
          namespace: envoy-gateway
        spec:
          geoIP:
            provider:
              maxMind:
                anonymousIpDbSource:
                  local:
                    path: /db/GeoIP2-Anonymous-IP.mmdb
                cityDbSource:
                  local:
                    path: /db/GeoLite2-City.mmdb
              type: MaxMind
          logging: {}
        status:
          ancestors:
          - ancestorRef:
              group: gateway.networking.k8s.io
              kind: GatewayClass
              name: envoy-gateway-class
            conditions:
            - lastTransitionTime: null
              message: EnvoyProxy has been accepted.
              reason: Accepted
              status: "True"
              type: Accepted
      listeners:
      - name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-1
      namespace: envoy-gateway-system
securityPolicies:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: SecurityPolicy
  metadata:
    name: geoip-policy
    namespace: default
  spec:
    authorization:
      defaultAction: Deny
      rules:
      - action: Allow
        name: allow-us-seattle-proxy
        principal:
          clientIPGeoLocations:
          - anonymous:
              isProxy: true
            city: Seattle
            country: US
    targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httproute-geo
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      conditions:
      - lastTransitionTime: null
        message: Policy has been accepted.
        reason: Accepted
        status: "True"
        type: Accepted
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-1-196ae069
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-1
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-1-196ae069
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-1
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 80
      geoIPProvider:
        maxMind:
          anonymousIpDbPath: /db/GeoIP2-Anonymous-IP.mmdb
          cityDbPath: /db/GeoLite2-City.mmdb
      hostnames:
      - '*'
      metadata:
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-geo
            namespace: default
          name: httproute/default/httproute-geo/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-geo/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: www.example.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-geo
          namespace: default
        name: httproute/default/httproute-geo/rule/0/match/0/www_example_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /geo1
        security:
          authorization:
            defaultAction: Deny
            rules:
            - action: Allow
              name: allow-us-seattle-proxy
              principal:
                clientIPGeoLocations:
                - anonymous:
                    isProxy: true
                  city: Seattle
                  country: US
      - destination:
          metadata:
            kind: HTTPRoute
            name: httproute-geo
            namespace: default
          name: httproute/default/httproute-geo/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            metadata:
              kind: Service
              name: service-1
              namespace: default
              sectionName: "8080"
            name: httproute/default/httproute-geo/rule/0/backend/0
            protocol: HTTP
            weight: 1
        hostname: www.example.com
        isHTTP2: false
        metadata:
          kind: HTTPRoute
          name: httproute-geo
          namespace: default
        name: httproute/default/httproute-geo/rule/0/match/1/www_example_com
        pathMatch:
          distinct: false
          name: ""
          prefix: /geo2
        security:
          authorization:
            defaultAction: Deny
            rules:
            - action: Allow
              name: allow-us-seattle-proxy
              principal:
                clientIPGeoLocations:
                - anonymous:
                    isProxy: true
                  city: Seattle
                  country: US
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
